# vmx

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
examples/: CMakeLists.txt
examples/ftxui-windows-observer/: CMakeLists.txt  FTXUIVolumeMixerObserver.cpp  FTXUIVolumeMixerObserver.h  main.cpp
include/vmx/: VolumeMixer.h  WindowsVolumeMixer.h
src/: CMakeLists.txt  VolumeMixer.cpp  WindowsVolumeMixer.cpp
